fix: move the history sort filter in header to avoid overlap

--- a/www/src/scss/navigator/misc/_misc.scss
+++ b/www/src/scss/navigator/misc/_misc.scss
@@ -12,7 +12,12 @@ $misc-footer-active: 70px;
 
   .misc-header {
     display: inline-flex;
+    justify-content: space-between;
     width: 100%;
+
+    .misc-header-nav {
+      display: inline-flex;
+    }
     a {
       padding: 0 10px;
       span {
