--- a/www/src/scss/styles.scss
+++ b/www/src/scss/styles.scss
@@ -1239,13 +1239,3 @@ body.show-overlay {
     margin-right: 4px;
   }
 }
-
-.history-order {
-  position: relative;
-}
-
-.history-order-select {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
